--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -31,13 +31,28 @@ The package can also be used to generate all necessary data structures, initial 
   
 ## Installation
 Install the development version from `GitHub` using:
-`devtools::install_github("nicholasjclark/mvgam")`. Note that to actually condition models with MCMC sampling, either the `JAGS` software must be installed (along with the `R` packages `rjags` and `runjags`) or the `Stan` 
-software must be installed (along with the package `rstan` and, optionally, the `cmdstanr` package). These are not 
-listed as dependencies of `mvgam` to ensure that installation is less difficult. If users wish to fit the models
-using `mvgam`, please refer to installation links for `JAGS` [here](https://sourceforge.net/projects/mcmc-jags/files/) or for `Stan` and `rstan` [here](https://mc-stan.org/users/interfaces/rstan)).
+`devtools::install_github("nicholasjclark/mvgam")`. Note that to actually condition models with MCMC sampling, either the `JAGS` software must be installed (along with the `R` packages `rjags` and `runjags`) or the `Stan` software must be installed (along with the package `rstan` and, optionally, the `cmdstanr` package). These are not  listed as dependencies of `mvgam` to ensure that installation is less difficult. If users wish to fit the models using `mvgam`, please refer to installation links for `JAGS` [here](https://sourceforge.net/projects/mcmc-jags/files/) or for `Stan` and `rstan` [here](https://mc-stan.org/users/interfaces/rstan)).
 
-## Brief introduction to the package
+## Citing mvgam and related software
+When using open source software (or software in general), please make sure to appropriately acknowledge the hard work that developers and maintainers put into making these packages available. Citations are currently the best way to formally acknowledge this work, so we highly encourage you to cite any packages that you rely on for your research.
 
+When using `mvgam`, please cite the following publication:
+
+- Clark, N.J. and Wells, K. (2022). Dynamic Generalized Additive Models (DGAMs) for forecasting      discrete ecological time series. *Methods in Ecology and Evolution*. *In Press*
+
+As `mvgam` acts as an interface to `Stan` and `JAGS`, please additionally cite whichever software you use for parameter estimation:
+
+- Carpenter B., Gelman A., Hoffman M. D., Lee D., Goodrich B., Betancourt M.,
+  Brubaker M., Guo J., Li P., and Riddell A. (2017). Stan: A probabilistic
+  programming language. *Journal of Statistical Software*. 76(1).
+  10.18637/jss.v076.i01
+- Plummer, M. (2013). JAGS: A program for analysis of Bayesian graphical models using Gibbs sampling.          *Proceedings of the 3rd International Workshop on Distributed Statistical Computing*. 124(125.10).
+
+Further, `mvgam` relies on several other `R` packages and, of course, on `R` itself. To
+find out how to cite R and its packages, use the `citation` function. There are
+some features of `mvgam` which specifically rely on certain packages. The most important of these is the generation of data necessary to estimate smoothing splines, which entirely rely on `mgcv`. The `rstan` and `cmdstanr` packages together with `Rcpp` makes `Stan` conveniently accessible in `R`, while the `rjags` and `runjags` packages together with the `coda` package make `JAGS` accessible in `R`. If you use some of these features, please also consider citing the related packages.
+
+## A brief introduction to the package
 We can explore the model’s primary functions using a test dataset that
 is available with all `R` installations. We introduce Dynamic Generalized Additive Models and some of the key utility functions provided in `mvgam`. First, load the `lynx` data and plot the series as well as its estimated autocorrelation function
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
@@ -216,25 +231,5 @@ mean(mod2_eval$series1$in_interval)
 
 The `compare_mvgams` function automates this process by rolling along a set of timepoints for each model, ensuring a more in-depth evaluation of each competing model at the same set of timepoints. There are many more extended uses for `mvgam` models, including the ability to fit dynamic factor processes for analysing and forecasting sets of multivariate discrete time series
 
-## Citing mvgam and related software
-
-When using open source software (or software in general), please make sure to appropriately acknowledge the hard work that developers and maintainers put into making these packages available. Citations are currently the best way to formally acknowledge this work, so we highly encourage you to cite any packages that you rely on for your research.
-
-When using `mvgam`, please cite the following publication:
-
-- Clark, N.J. and Wells, K. (2022). Dynamic Generalized Additive Models (DGAMs) for forecasting      discrete ecological time series. *Methods in Ecology and Evolution*. *In Press*
-
-As `mvgam` acts as an interface to `Stan` and `JAGS`, please additionally cite whichever software you use for parameter estimation:
-
-- Carpenter B., Gelman A., Hoffman M. D., Lee D., Goodrich B., Betancourt M.,
-  Brubaker M., Guo J., Li P., and Riddell A. (2017). Stan: A probabilistic
-  programming language. *Journal of Statistical Software*. 76(1).
-  10.18637/jss.v076.i01
-- Plummer, M. (2013). JAGS: A program for analysis of Bayesian graphical models using Gibbs          sampling. *Proceedings of the 3rd international workshop on distributed statistical computing*.    124(125.10).
-
-Further, `mvgam` relies on several other `R` packages and, of course, on `R` itself. To
-find out how to cite R and its packages, use the `citation` function. There are
-some features of `mvgam` which specifically rely on certain packages. The most important of these is the generation of data necessary to estimate smoothing splines, which entirely rely on `mgcv`. The `rstan` and `cmdstanr` packages together with `Rcpp` makes `Stan` conveniently accessible in `R`, while the `rjags` and `runjags` packages together with the `coda` package make `JAGS` accessible in `R`. If you use some of these features, please also consider citing the related packages.
-
-# License
+## License
 This project is licensed under an `MIT` open source license
